feat(/api/products): add filter by min and max price
